# broker

./: .clang-format  .dockerignore  .drone.yml  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Configuration.cpp  Configuration.h  EventCallback.h  GearmanClient.cpp  GearmanClient.h  HostStatusCallback.cpp  HostStatusCallback.h  IStatusengine.h  LogStream.cpp  LogStream.h  NagiosHost.cpp  NagiosHost.h  NagiosHostStatusData.cpp  NagiosHostStatusData.h  NagiosObject.cpp  NagiosObject.h  NagiosService.cpp  Nebmodule.cpp  Nebmodule.h  NebmoduleCallback.cpp  NebmoduleCallback.h  README.md  RabbitmqConfiguration.cpp  RabbitmqConfiguration.h  Statusengine.cpp  Statusengine.h  chacks.h  docker-compose.yml  export_headers.sh  meson.build  meson_options.txt  naemon.Dockerfile  nebmodule.cpp  (+4 more)
.ci/nagios/: locations.h
Configuration/: Configuration.cpp  Configuration.h  GearmanConfiguration.cpp  GearmanConfiguration.h  MessageHandlerConfiguration.cpp  MessageHandlerConfiguration.h  Queue.h  RabbitmqConfiguration.cpp  RabbitmqConfiguration.h
EventCallback/: BulkMessageCallback.cpp  BulkMessageCallback.h  EventCallback.cpp  EventCallback.h  MessageWorkerCallback.cpp  MessageWorkerCallback.h
MessageHandler/: GearmanClient.cpp  GearmanClient.h  IMessageHandler.h  IMessageHandlerList.h  IMessageQueueHandler.h  MessageHandler.cpp  MessageHandler.h  MessageHandlerList.cpp  MessageHandlerList.h  MessageQueueHandler.cpp  MessageQueueHandler.h  RabbitmqClient.cpp  RabbitmqClient.h
NagiosCallbacks/: AcknowledgementDataCallback.cpp  AcknowledgementDataCallback.h  CommentDataCallback.cpp  CommentDataCallback.h  ContactNotificationDataCallback.cpp  ContactNotificationDataCallback.h  ContactNotificationMethodDataCallback.cpp  ContactNotificationMethodDataCallback.h  ContactStatusDataCallback.cpp  ContactStatusDataCallback.h  DowntimeDataCallback.cpp  DowntimeDataCallback.h  EventHandlerDataCallback.cpp  EventHandlerDataCallback.h  ExternalCommandDataCallback.cpp  ExternalCommandDataCallback.h  FlappingDataCallback.cpp  FlappingDataCallback.h  HostCheckCallback.cpp  HostCheckCallback.h  HostStatusCallback.cpp  HostStatusCallback.h  LogDataCallback.cpp  LogDataCallback.h  NagiosCallbacks.h  NebmoduleCallback.cpp  NebmoduleCallback.h  NotificationDataCallback.cpp  NotificationDataCallback.h  ProcessDataCallback.cpp  ProcessDataCallback.h  ProgramStatusDataCallback.cpp  ProgramStatusDataCallback.h  ServiceCheckCallback.cpp  ServiceCheckCallback.h  ServiceStatusCallback.cpp  ServiceStatusCallback.h  StandardCallback.h  StateChangeCallback.cpp  StateChangeCallback.h  (+2 more)
NagiosObjects/: NagiosAcknowledgementData.cpp  NagiosAcknowledgementData.h  NagiosCommentData.cpp  NagiosCommentData.h  NagiosContactNotificationData.cpp  NagiosContactNotificationData.h  NagiosContactNotificationMethodData.cpp  NagiosContactNotificationMethodData.h  NagiosContactStatusData.cpp  NagiosContactStatusData.h  NagiosDowntimeData.cpp  NagiosDowntimeData.h  NagiosEventHandlerData.cpp  NagiosEventHandlerData.h  NagiosExternalCommandData.cpp  NagiosExternalCommandData.h  NagiosFlappingData.cpp  NagiosFlappingData.h  NagiosHost.cpp  NagiosHost.h  NagiosHostCheckData.cpp  NagiosHostCheckData.h  NagiosHostStatusData.cpp  NagiosHostStatusData.h  NagiosLogData.cpp  NagiosLogData.h  NagiosNotificationData.cpp  NagiosNotificationData.h  NagiosObject.cpp  NagiosObject.h  NagiosProcessData.cpp  NagiosProcessData.h  NagiosProgramStatusData.cpp  NagiosProgramStatusData.h  NagiosService.cpp  NagiosService.h  NagiosServiceCheckData.cpp  NagiosServiceCheckData.h  NagiosServiceCheckPerfData.cpp  NagiosServiceCheckPerfData.h  (+6 more)
devtools/: DownloadHeaders.ps1  c_cpp_properties.json
devtools/buildenv/: queuestatus  statusengine.cfg  statusengine.toml
devtools/ci/: naemon.pc
devtools/ci/naemon/: buildopts.h
devtools/gearmand/: Dockerfile
src/: CMakeLists.txt  Configuration.h  EventCallback.h  Exceptions.h  INebmodule.h  ISerializer.h  IStatusengine.h  LogStream.h  NagiosObject.h  Nebmodule.cpp  Nebmodule.h  NebmoduleCallback.h  NebmoduleNaemon.cpp  NebmoduleNagios.cpp  ObjectSerializer.h  ObjectSerializerImpl.h  Queue.h  Statusengine.cpp  Statusengine.h  Utility.h  gsl.h  meson.build
src/MessageHandler/: CMakeLists.txt  GearmanClient.cpp  GearmanClient.h  IBulkMessageCounter.h  IMessageHandler.h  MessageHandler.h  MessageHandlerList.cpp  MessageHandlerList.h  RabbitmqClient.cpp  RabbitmqClient.h
tests/: CMakeLists.txt  LogStream.cpp  LogStream_Test.cpp  MessageHandlerTestSuite.h  MessageHandler_Benchmark.cpp  MessageHandler_Test.cpp  NagiosServicestatusData.cpp  NagiosServicestatusData_Test.cpp  NagiosTestSuite.h  Serializer_Benchmark.cpp  fake_naemon.cpp
